# backend/openapi/api.ts
@@ -333,6 +333,44 @@ export interface paths {
       };
     };
   };
+  "/getUniqueCase/{caseId}/{userId}/{reviewerId}": {
+    /** gets an assignment from the caseId */
+    get: {
+      responses: {
+        /** @description returns the assignment details */
+        200: {
+          content: {
+            "application/json": components["schemas"]["Assignment"];
+          };
+        };
+        /** @description the server encountered an error */
+        500: {
+          content: {
+            "application/json": components["schemas"]["Response"];
+          };
+        };
+      };
+    };
+  };
+  "/getFinal/{caseId}": {
+    /** gets an assignment from the caseId */
+    get: {
+      responses: {
+        /** @description returns the assignment details */
+        200: {
+          content: {
+            "application/json": components["schemas"]["Assignment"][];
+          };
+        };
+        /** @description the server encountered an error */
+        500: {
+          content: {
+            "application/json": components["schemas"]["Response"];
+          };
+        };
+      };
+    };
+  };
   "/updateAssignment": {
     /** Updates the information attached to an assignment */
     post: {
